Adding Python3 support for Tox
Adding Python3 support for Tox in SDFlexutils

Change-Id: Iad3374afffaab11886c6d75cfbde3ad3fcf6c358

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py35,py34,py27,pep8
+envlist = py3,pep8
 
 [testenv]
 usedevelop = True
@@ -13,11 +13,11 @@ setenv = VIRTUAL_ENV={envdir}
          TESTS_DIR=./sdflexutils/tests/
 
 [testenv:venv]
-basepython = python2.7
+basepython = python3
 commands = {posargs}
 
 [testenv:pep8]
-basepython = python2.7
+basepython = python3
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/test-requirements.txt
@@ -25,7 +25,7 @@ commands =
     flake8 sdflexutils
 
 [testenv:cover]
-basepython = python2.7
+basepython = python3
 setenv =
     {[testenv]setenv}
     PYTHON=coverage run --branch --omit='*test*' --source sdflexutils --parallel-mode
