--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ description-file =
     README.rst
 license = Apache License, Version 2.0
 author = Hewlett Packard Enterprise
-#author-email = proliantutils@gmail.com
+#author-email = sdflex.openstack@hpe.com
 home-page = https://github.hpe.com/sdflex/sdflexutils
 classifier =
     Development Status :: 4 - Beta
