--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,6 @@ author = Hewlett Packard Enterprise
 #author-email = sdflex.openstack@hpe.com
 home-page = https://github.hpe.com/sdflex/sdflexutils
 classifier =
-    Development Status :: 4 - Beta
     Environment :: Console
     Environment :: Web Environment
     Intended Audience :: Developers
@@ -16,6 +15,9 @@ classifier =
     License :: OSI Approved :: Apache Software License
     Operating System :: OS Independent
     Programming Language :: Python
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.5
+    Programming Language :: Python :: 3.7
 
 [files]
 packages =
