Changes for PyPI packaging
Change-Id: I8312bb59b44a79cb4e426fd45a0198d76b5f177a

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,13 +5,12 @@ description-file =
     README.rst
 license = Apache License, Version 2.0
 author = Hewlett Packard Enterprise
-#author-email = sdflex.openstack@hpe.com
-home-page = https://github.hpe.com/sdflex/sdflexutils
+author-email = sdflex.openstack@hpe.com
+home-page = https://github.com/HewlettPackard/sdflexutils/wiki
 classifier =
-    Environment :: Console
-    Environment :: Web Environment
-    Intended Audience :: Developers
+    Environment :: OpenStack
     Intended Audience :: Information Technology
+    Intended Audience :: System Administrators
     License :: OSI Approved :: Apache Software License
     Operating System :: OS Independent
     Programming Language :: Python
