Fixing format issues and some comments for sdflexutils
Change-Id: I47d8c1b5b78c4f4b38f30220097ab6e3ca6c7c5f

--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,7 @@ deps =
     -r{toxinidir}/test-requirements.txt
 commands =
     flake8 sdflexutils
+    doc8 README.rst
 
 [testenv:cover]
 basepython = python3
