--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,4 @@ requests!=2.12.2,!=2.13.0,>=2.10.0 # Apache-2.0
 retrying!=1.3.0,>=1.2.3 # Apache-2.0
 
 # Redfish communication uses the Sushy library
-sushy>=1.8.0
+sushy==1.8.0
