--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 six>=1.9.0 # MIT
+retrying!=1.3.0,>=1.2.3 # Apache-2.0
+jsonschema>=2.6.0 # MIT
 
 # Redfish communication uses the Sushy library
 sushy>=3.2.0
