--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,4 @@ requests>=2.14.2 # Apache-2.0
 retrying!=1.3.0,>=1.2.3 # Apache-2.0
 
 # Redfish communication uses the Sushy library
-sushy>=3.2.0
+sushy>=3.5.0,<4.0.0
